css/main.css
@import url('https://fonts.googleapis.com/css2?family=Goblin+One&display=swap');

/*Custom Properties*/

:root {
    --leading: 2em;
}

body {
    font-family: 'Goblin One', sans-serif;
    margin: 0;
}

.hero-bg {
    background-image: url(../images/bg.jpeg);
    background-position: 0% 90%;
    background-size: cover;
    color: white;
    text-align: center;
    padding-bottom: 4em;
}

header {
    padding: 3em 0 0 0;
}

.hero-bg a {
    color: white;
    text-decoration: none;
    font-weight: bold;
    font-size: 3rem;
    
}

section {
    margin: 0 1em;
}

h1 {
    font-size: 2.5rem;
    margin: 2em 0 1.2em;
}

h1 span{
    text-transform: uppercase;
    display: block;
    font-size: 1.5rem;
    position: relative;
    z-index: 1;
}

h1 span::before {
    content: '';
    position: absolute;
    width: 3em;
    background: #00BFFF;
    height: .4em;
    bottom: 0;
    z-index: -1;
    margin-left: -.3em;
}

.hero-bg p {
    font-weight: bold;
    margin: 0 1em 3em;
}

.form-container {
    background-color: white;
    margin: 2em 1em 0;
    border-radius: 1.5em;
    padding: 1.5em;
}

label {
    color: #2D7D98;
    font-weight: bold;
    display: block;
    margin-bottom: 1em;
    font-size: 1.2em;
}

input[type="text"] {
    border: 1px solid #606060;
    border-radius: 3em;
    width: 100%;
    padding: 1em;
    box-sizing: border-box;
    margin-top: 1.5em;
}

.form-container p {
    color: #606060;
    margin: .5em 0;
    font-weight: lighter;
    font-size: .9em;
}

input[type="button"] {
    background-color: #F89104;
    border: none;
    width: 100%;
    color: white;
    font-weight: bold;
    padding: 1em 0;
    border-radius: .5em;
    font-size: 1.3em;
    cursor:pointer;
    margin-top: 1.5em;
}

input[type="button"]:hover {
    background-color: #db8103;
    font-weight: normal;
    
}

.authentic {
    margin: 0;
}

.right-col {
    text-align: center;
}

h2 {
    text-transform: uppercase;
    position: relative;
}

h2::before {
    content: '';
    position: absolute;
    width: 6em;
    background: #00BFFF;
    height: .4em;
    bottom: 0;
    z-index: -1;
    margin-left: -.3em;
}

img {
    width: 100%;
    background-size: contain;
}

.right-col p {
    line-height: var(--leading);
    font-weight: lighter;
}

.footer {
    background-color: #090909;
    color: white;
    padding: 1.5em;
    text-align: center;
}

.bottom-row {
    padding: .1em;
}

/*media queries for different devices*/

/*tablet*/
@media(min-width: 720px){

    section{

        margin: 0 3em;
    }

    .form-container {
        margin: 2em -4em 0;
    }
}

/*desktop*/
@media(min-width: 1080px){
    
    .hero-bg {
        text-align: left;
    }

    .hero-bg p {
        font-weight: lighter;
        margin: 0 0 3em;
    }

    .hero-bg section{
        width: 60%;
    }

    .form-container{
        margin: 2em 0 0;
        padding: 2em;
        border-radius: 1.5em;
        box-shadow: 10px 10px 10px rgba(0,0,0, .3);
    }

    form{
        display: flex;
    }

    .form-left{
        width: 75%;
    }

    label {
        margin: 0;
    }

    input[type="button"]{
        height: fit-content;
        font-size: 1.5em;
        margin: 1em 0 0 1em;
        padding: 1em 0;
        width: 30%;
    }
    .hero-bg p {
        margin: 1em;
    }
}

